# gdrive

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
gdrive/: __init__.py  main.py
gdrive/mods/: auth.py  doc.py  file.py  folder.py  service.py  sheet.py  types.py
